blazor server identity

--- a/ch09/BlazorServerAuth/Components/_Imports.razor
+++ b/ch09/BlazorServerAuth/Components/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using BlazorServerAuth
 @using BlazorServerAuth.Components
+@using Microsoft.AspNetCore.Components.Authorization
