--- a/ch01/Aspire/AspireSample.Web/Components/App.razor
+++ b/ch01/Aspire/AspireSample.Web/Components/App.razor
@@ -15,7 +15,7 @@
 
 <body>
     <Routes />
-    <script src="_framework/blazor.web.js"></script>
+    <script src="@Assets["_framework/blazor.web.js"]"></script>
 </body>
 
 </html>
